--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Pranay Ughade</h1>
+            <div><a href="mailto:Pranay.Ughade@studentambassadors.com">Pranay.Ughade@studentambassadors.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/pranayughade">@github_handle</a></li>
+                    <li><a href="https://linkedin.com/in/pranay-ughade-3b70a81b4/">@linkedin_handle</a></li>
+                    <li><a href="https://twitter.com/PranaydUghade">@twitter_handle</a></li>
                 </ul>    
             </section>
             
@@ -35,7 +35,7 @@
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
+                        <li>GPA: 8.19</li>
                         <li>Years</li>
                     </ul>
                 </div>
@@ -63,8 +63,8 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Front end developer</li>
+                    <li>python</li>
                 </ul>
             </section>
             <section class="box">
@@ -75,8 +75,8 @@
 
                 <h3>Company name</h3>
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>Microsoft</li>
+                    <li>Google</li>
                 </ul>
             </section>
             <section class="box">
